--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="y+6a04bUtH/x6o1eVsQ2iDXVE8cWk3GjeXL0zyy0eqUCm5Wm4dR0bOCjXGXpWDuLbVvUtwCcddy5S41i7dXCALfirPzE0F/UQESjW5mLfdr65grYdbNoYPAx4UtGYRmD.PX0nMpHP91IG+wGBEiPVlEx3mo8L0M6N4M848xfmMV9P7qaNRZk9ap/8OR+PjSdCjs7n9mLYSjAEiUOo+r9umfVUHU84r88twF1PdaCLfUSyjzWcaW/ibQ8yw/lBxd0c">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GcLhZ4bxxz0AN8OzMMNOT1lfhBJK1q7T+AGVLqD/zSAz9I8KwxB4SsZJoSV8Rq79w0JqhO6QGxwP4FHdRXz3Svv4TrdTfhT76PkxxWeg07jVkOxfKeCTr1VdYOJy9Cz3.E9rLaK0OJb8Zs4N1vESNPU7G3ne1DfbpDPmRO7ejS2aCYs6Ye+ViC4xbDnv//bdlAElVGWHUOxlCULlXr8KFtTT7vuk+9ssmWbGxMI2nDBKyTHW5N2VkSGCqsIl7JTc0">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
