--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="B1DRe9Y8ZCXzmYc/4QvtIm3oT6RZ5S4AHlrJDlVVc5JTFAI65NnvwWQO1zcjqUZQKF5/FUFSeXcS+OoAf2s3l7aQR+DXiTA4CqEClziNGDQdwrBsKm+2WMC+ZZIK2R1H.IX7jPJ8AjxjYEyQbHeRprj8e7YhlsL9/AIJ7rEsibEbIMscxTl00KUy+i7Qn2Z2hVrtK0L1b8H5wjQz4iby0oNkjJvVPK2T64pNitoxRAvaHfQgjgMdo17KkYPTQEXrf">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2D6Buz0NTHoBGcZp80NZxgVouLyhj1k1Jx+tr6CwXGyCyEoGo1IOtgwqy6wprXa8g9yyCv8bSVZGH/IARfBULoVClZSmHfDV6epUtDZUWS0zBuf3G6Q86nY59vkBNfhr.YIfQ5p5G/aYBJ00Exi3BIZLvinDNuiVZnVWD+kG8m93irBQ6fjKEJjlpwnuXkllkAUlIzMdCsamdnT06HWDn/QX2Z5KonNowme2MnpVLsdJYd1b3vAA+PyYR6g0xKmx7">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
