--- a/training.html
+++ b/training.html
@@ -94,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
