--- a/Indicators.html
+++ b/Indicators.html
@@ -94,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -217,7 +217,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background634.jpg">
+                    <img src="assets/images/background64.jpg">
                 </div>
             </div>
             <div class="cards-block">
@@ -845,8 +845,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
