--- a/JobAdd.html
+++ b/JobAdd.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="C9jFDBCtDVUiFO7OKmmySgjSylH98KWGKV5s+I+8Y3k8pxqEBwxzlIyoI0r0wciVZ/hm+B1EyX7jTbZrfUGefEtclpGGa1H1UUOxTy+gq8XL4mqyFm6wlrMH7jHq7uEd.ndt0TwEW1iohoQYA12nfYafOwgB4E4jAwOGeOW87vnTQ4c2D9qhIXhMSm4S6pk3nAJU1eZzaq3Ju6w/lv7bggzwt5Nxv4xSzRXVRAEH61u+niqWvCPyJaQ6XfzX3ynNk">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zriFFMeGlzk5hngKE+j9rZljKtQMfqJ8KGKIR9NW5Mn/dfnI8kPrrwhSNyNR8BGS10h4MS7K1EtdV4yDx81HkKkNtpZxkz9db7NiUdnMDR02biXWGRZSW1rOkK7Rn2/8.gEShURJUoYf/Rr2T0No7sR/o6p1g7OgkrAMxTlfVX6WMKX4DQYKJi4xPgwqK1hSx3uF5M8N45XBRsMaB3RzfAxK2rspDOWkRi2FzAz/FNfrSnp5En6EpxWko8VcbRb4b">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -384,8 +384,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
