--- a/RegUser.html
+++ b/RegUser.html
@@ -96,21 +96,21 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="form cid-rDpy93NEgi" dir="ltr" id="formbuilder-6e">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="form cid-rDpy93NEgi" dir="ltr" id="formbuilder-6e">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gL51K8KMmKoqKKm6hmZLIXWjnAzWF3sboYxq4q2XZOda2tIujIUS7JI/vY6GSSM1uL1uddyl8jEqaQaX0cHS8q2uOBnETDcBzmRDHSP38N01HRr3UhI0ikAH7clLWVf+.po7n5O7MdXvWzor5FQeeCZWMr79tnT3zExEtjbFHqxiiTowF3IpVTs/W3VRA2bi5bacVQTaHZounasb4I10w6FwVfgQIVpqJsH13S3maOtm9FjbNJWPL5n+1Wgm5AfHn">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EHTO34MdfJMajln0DpzAVBq6zxOblncF+XNzESY0bxtzQhjXc4dDysdzN5ZDZZKN1KzKZPjBROmQvhRPKygQIgGhgSsfJdqCW/dNzn2jXIqX32u+TJbOfBe7momzvxzN.1gq0hEDY65Y7xlSAL1Bp5IYOuIdU8i2PuWIfk0rqZKQBQlQTtGW8eyjIy6L2Nt4XUrTPi0p3PxOFynnOEznu7vNDvItg1prq35f/R2KuWQj8oi3TvTK27xEkyHgpEdOv">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2">&lt;b&gt;User Registeration&lt;/b&gt;</h4>
+<h4 class="mbr-fonts-style display-2"><strong>User Registeration</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -134,12 +134,15 @@
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6e">
 </div>
+<div class="col-lg-4 col-md-12 col-sm-12 form-group" data-for="date">
+<input type="date" name="date" data-form-field="date" class="form-control display-7" value="2018-07-22" id="date-formbuilder-6e">
+</div>
 <div class="col-lg-4 col-md-12 col-sm-12">
 <p class="mbr-fonts-style display-7">
 </p>
 </div>
-<div data-for="date" class="col-lg-4 col-md-12 col-sm-12 form-group">
-<input type="date" name="date" data-form-field="date" class="form-control display-7" value="2018-07-22" id="date-formbuilder-6e">
+<div class="col-lg-4 col-md-12 col-sm-12 form-group" data-for="date1">
+<input type="date" name="date1" data-form-field="date" class="form-control display-7" value="2018-07-22" id="date1-formbuilder-6e">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <h5 class="mbr-fonts-style display-5">
@@ -149,7 +152,7 @@
 <textarea name="message" placeholder="general " data-form-field="message" class="form-control display-7" id="message-formbuilder-6e"></textarea>
 </div>
 <div data-for="url" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="url" name="url" placeholder="https://" pattern="https://.*" data-form-field="url" class="form-control display-7" value="" id="url-formbuilder-6e">
+<input type="url" name="url" placeholder="https://" data-form-field="url" class="form-control display-7" pattern="https://.*" value="" id="url-formbuilder-6e">
 </div>
 <div data-for="text" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="text" name="text" placeholder="Text" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-6e">
@@ -157,7 +160,7 @@
 <div data-for="text1" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="text" name="text1" placeholder="Text" data-form-field="text1" class="form-control display-7" value="" id="text1-formbuilder-6e">
 </div>
-<div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
+<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="textarea">
 <textarea name="textarea" placeholder="Textarea" data-form-field="textarea" class="form-control display-7" id="textarea-formbuilder-6e"></textarea>
 </div>
 <div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbri-save mbr-iconfont mbr-iconfont-btn"></span>Save&nbsp;</button></div>
@@ -200,9 +203,9 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-md-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">
+                    <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:support@beta-research.org">
                         © Copyright 2019 Beta-Research - All Rights Reserved
-                    </p>
+                    </a></p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
@@ -248,8 +251,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
