--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wEvpMBNOUytHiJSPAimXC8lY/UxIr3vNaUb7h0ERzpH8yDDQwOSwacbZZz/D4T1R1M8WqvREIbpiAf5NulIqbW1cD24z+P90HaN2j/0bxlEqfbtW5toDpGnLIvBEgnq4.lQkF9SbqTkrrRNYqeqqtpgizSlUHa/O/Co7WVMD5zN0vtt1P/lIUNmSHl5XkPAv1H+l/7jRwBXUVXsW4MxfDr6/9O4F81fDOvi0juN1JzxIXhPVfmyzov45k1Mr9cwXH">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Or2qMfJJnX5jKdN5A6xLX1PTh2aJXl1eqgD3NmCITq0TzoZVKNWcAgXpmzDa9iXe/7P5VIujfi2QX2nORlXmjAUbnumOFUuPaBbHgKcKviZeT54MAU2cov1jR4MWg/UL.yfG5BXT2wNz/HuqGqqpQxNAVM/Vd3IXGVCygfHl4MKVo75kGcqcgUduhVgNnP/Wif6yziGdUvecS7R9qjpR7tQjSL3JtuI7+Le9ZcCuq8sNm1cits6qvAlT1KuZuzYzM">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -318,8 +318,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
