--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GcLhZ4bxxz0AN8OzMMNOT1lfhBJK1q7T+AGVLqD/zSAz9I8KwxB4SsZJoSV8Rq79w0JqhO6QGxwP4FHdRXz3Svv4TrdTfhT76PkxxWeg07jVkOxfKeCTr1VdYOJy9Cz3.E9rLaK0OJb8Zs4N1vESNPU7G3ne1DfbpDPmRO7ejS2aCYs6Ye+ViC4xbDnv//bdlAElVGWHUOxlCULlXr8KFtTT7vuk+9ssmWbGxMI2nDBKyTHW5N2VkSGCqsIl7JTc0">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="24m0iacitdg4dPACUcVoDhQG833+tW+6Zb15hi3QJbLe6wHl0iiizAt1WXtO5+y+ljzad6YSXa220q/JDBlEi4sb9M1QUzx8oyIVpJHmeCIjMde9ZaxHwTPoWkBxOk9B.ssZWSYZKvw2bCeurWdLuGrSKM4UmtY+VpxNGXq/YeGjNo0iYae4UlzUSku7qW3bQ/CloE6bqu5rVYCFyOokbSG5E+GDrk3YGw5lalRDcCmXN378gPMz+kn71UoQA2Wlq">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -318,8 +318,8 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   
 </body>
 </html>
